--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    config.activate.on-profile: develop
+    active: develop
 
   application:
     name: financial_planning_api
@@ -12,25 +12,29 @@ spring:
     generate-ddl: true
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        format_sql: true
-        dialect: org.hibernate.dialect.PostgreSQL10Dialect
-        temp.use_jdbc_metadata_defaults: false
-        enable_lazy_load_no_trans: true
-      query:
-        in_clause_parameter_padding: true
+      properties:
+        hibernate:
+          format_sql: true
+          dialect: ${spring.jpa.database-platform}
+          temp.use_jdbc_metadata_defaults: false
+          enable_lazy_load_no_trans: true
+        query:
+          in_clause_parameter_padding: true
 
   datasource:
     driver-class-name: org.postgresql.Driver
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgres://localhost:5432/financial_planning
+    url: jdbc:postgresql://localhost:5432/financial_planning
     username: lucas
     password: admin
 
   flyway:
-    locations: "classpath:/db/migration"
+    user: lucas
+    password: admin
     schemas: migration
+    flyway.url: jdbc:postgresql://localhost:5432/financial_planning
+    locations: "classpath:/db/migration"
+    enabled: true
     validate-on-migrate: true
 
   server:
