--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQL10Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     generate-ddl: true
     hibernate:
@@ -29,10 +29,10 @@ spring:
     password: admin
 
   flyway:
-    user: lucas
-    password: admin
-    schemas: migration
-    flyway.url: jdbc:postgresql://localhost:5432/financial_planning
+#    user: lucas
+#    password: admin
+#    schemas: public
+#    flyway.url: jdbc:postgresql://localhost:5432/financial_planning
     locations: "classpath:/db/migration"
     enabled: true
     validate-on-migrate: true
