Configuração do contexto da aplicação

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,8 @@ api:
                    /configuration/security, 
                    /webjars/**, 
                    /actuator/**, 
-                   /login
+                   /login,
+                   /teste
 
 spring:
   profiles:
