--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 
 api:
-  base-path: financial_planning/v1/
+  base-path: /financial_planning/v1
   no-secured-urls: /v3/api-docs, 
                    /configuration/ui, 
                    /swagger-resources/**, 
@@ -50,7 +50,7 @@ spring:
     enabled: true
     validate-on-migrate: true
 
-  server:
-    port: 8081
-    servlet:
-      context-path: ${api.base-path}
+server:
+  port: 8081
+  servlet:
+    context-path: ${api.base-path}
