--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <version>2.0.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+            <type>jar</type>
+        </dependency>
+
 
     </dependencies>
 
