--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -45,8 +45,8 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/financial_plan
-    username: lucas
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
     password: admin
 
   flyway:
