--- a/.github/workflows/auto_pull_request.yml
+++ b/.github/workflows/auto_pull_request.yml
@@ -15,6 +15,20 @@ on:
       - completed
 
 jobs:
+  build_and_save_artifact:
+    name: Save JAR Artifact
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Save JAR Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: financial_planning-${{ github.run_number }}
+          path: target/*.jar
+
   open_pull_request:
     name: Open Pull Request For Feature Branch
     runs-on: ubuntu-latest
