--- a/.github/workflows/auto_pull_request.yml
+++ b/.github/workflows/auto_pull_request.yml
@@ -1,12 +1,4 @@
-# Workflow responsável por automatizar a criação de um PR para a develop
-
-# Está configurado para criar um PR somente quando
-# for concluido o workflow de build e teste com sucesso.
-
-# Enquanto um PR ainda estiver aberto, os commits na branch serão mesclados
-# no mesmo PR, até o mesmo ser fechado e concluído
-
-name: Auto Open Pull Request for Feature Branch
+name: Auto Open Pull Request to Develop
 
 on:
   workflow_run:
@@ -15,24 +7,9 @@ on:
       - completed
 
 jobs:
-  build_and_save_artifact:
-    name: Save JAR Artifact
+  Open_Pull_Request:
+    name: Open Pull Request to Develop
     runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Save JAR Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: financial_planning-${{ github.run_number }}
-          path: target/*.jar
-
-  open_pull_request:
-    name: Open Pull Request For Feature Branch
-    runs-on: ubuntu-latest
-    needs: build-and-test
 
     steps:
       - name: Checkout repository
