--- a/.github/workflows/build_and_run_tests.yml
+++ b/.github/workflows/build_and_run_tests.yml
@@ -1,7 +1,3 @@
-
-# Workflow responsável por fazer o build e testar o código
-# sempre que for realizado um commit na branch
-
 name: Maven Build And Run Test
 
 on:
@@ -10,17 +6,15 @@ on:
       feature/**,
       fix/**
     ]
-  pull_request:
-    branches: [
-      master,
-      develop
-    ]
 
 jobs:
-  build-and-test:
+  Build_Artifact:
+    name: Build Artifact
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -28,11 +22,23 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Build with Maven
+        run: mvn clean install -DskipTests=true
+
+  Run_Unit_Tests:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    steps:
       - name: Run Unit Tests
         run: mvn test
 
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+  Save_Artifact:
+    name: Save JAR Artifact
+    runs-on: ubuntu-latest
 
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    steps:
+      - name: Save JAR Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: financial_planning-${{ github.run_number }}
+          path: target/*.jar
