--- a/.github/workflows/build_and_run_tests.yml
+++ b/.github/workflows/build_and_run_tests.yml
@@ -30,6 +30,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ Build_Artifact ]
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Run Unit Tests
         run: mvn test
 
@@ -39,6 +42,12 @@ jobs:
     needs: [ Run_Unit_Tests ]
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Build with Maven
+        run: mvn clean install -DskipTests=true
+
       - name: Save JAR Artifact
         uses: actions/upload-artifact@v2
         with:
