--- a/.github/workflows/build_and_run_tests.yml
+++ b/.github/workflows/build_and_run_tests.yml
@@ -44,7 +44,6 @@ jobs:
         run: mvn test
 
   Save_Artifact:
-
     name: Save JAR Artifact
     runs-on: ubuntu-latest
     needs: [ Run_Unit_Tests ]
@@ -68,5 +67,23 @@ jobs:
         with:
           name: financial_planning-${{ github.run_number }}
           path: target/*.jar
+
+  Create_Pull_Request:
+    name: Open Pull Request to Develop
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
+          branch: ${{ github.event.ref }}
+          base: develop
+          title: "Auto-generated PR for branch ${{ github.ref }} into develop."
+          body: "This PR was automatically created because of a new commit to branch ${{ github.ref }}."
+          draft: false
 
 
