--- a/.github/workflows/build_and_run_tests.yml
+++ b/.github/workflows/build_and_run_tests.yml
@@ -1,4 +1,4 @@
-name: Maven Build And Run Test
+name: [ FEAT ] Build And Pull Request
 
 on:
   push:
@@ -32,14 +32,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-          
+
       - name: Run Unit Tests
         run: mvn test
 
@@ -86,5 +86,3 @@ jobs:
           title: "Auto-generated PR for branch ${{ github.ref }} into develop."
           body: "This PR was automatically created because of a new commit to branch ${{ github.ref }}."
           draft: false
-
-
