test: testing workflow

--- a/.github/workflows/auto_pull_request_to_master.yml
+++ b/.github/workflows/auto_pull_request_to_master.yml
@@ -1,4 +1,4 @@
-name: [ DEVELOP ] Create Release Branch and Pull Request
+name: DEVELOP - Create Release Branch and Pull Request
 
 on:
   pull_request:
