--- a/.github/workflows/build_and_run_tests.yml
+++ b/.github/workflows/build_and_run_tests.yml
@@ -72,7 +72,7 @@ jobs:
   Create_Pull_Request:
     name: Open Pull Request to Develop
     runs-on: ubuntu-latest
-    needs: [ Save_Artifact ]
+    needs: [ Run_Unit_Tests ]
 
     steps:
       - name: Checkout repository
