--- a/.github/workflows/auto_pull_request_to_master.yml
+++ b/.github/workflows/auto_pull_request_to_master.yml
@@ -22,23 +22,18 @@ jobs:
         id: next_release_version
         run: |
           last_release=$(git for-each-ref --format='%(refname)' refs/heads/release/v* | sed -n 's|refs/heads/release/v||p' | sort -n | tail -1)
-
           if [[ -z "${last_release}" ]]; then
-            next_release="v0.1.0" 
+            next_release="v0.1.0"
           else
             major=$(echo "${last_release}" | cut -d. -f1)
             minor=$(echo "${last_release}" | cut -d. -f2)
             patch=$(echo "${last_release}" | cut -d. -f3)
-
             if [[ "${major}" -eq 0 && "${minor}" -eq 9 && "${patch}" -eq 9 ]]; then
               next_release="v1.0.0"
-          
             elif [[ "${minor}" -eq 9 && "${patch}" -eq 9 ]]; then
               next_release="v${major}.0.0"
-          
             elif [[ "${patch}" -eq 9 ]]; then
               next_release="v${major}.${minor}.0"
-          
             else
               next_release="v${major}.${minor}.$((patch + 1))"
             fi
@@ -46,27 +41,26 @@ jobs:
           echo "::set-output name=next_release::${next_release}"
 
       - name: Create Release Branch
-        if: steps.event_type.outputs.event == 'workflow_run'
-          && github.event.workflow_run.event == 'completed'
+        if: steps.event_type.outputs.event == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.base.ref == 'develop'
 
         run: |
           next_release="${{ steps.next_release_version.outputs.next_release }}"
+          git pull
           git checkout develop
-          git pull origin develop
+          git pull origin develop || true
           git checkout -b "release/${next_release}"
           git push origin "release/${next_release}"
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: Open Pull Request to Release
-        if: steps.event_type.outputs.event == 'pull_request'
-          && github.event.pull_request.merged
-          && github.event.pull_request.base.ref == 'develop'
+        if: steps.event_type.outputs.event == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.base.ref == 'develop'
 
         run: |
           next_release="${{ steps.next_release_version.outputs.next_release }}"
+          git pull
           git checkout develop
-          git pull origin develop
+          git pull origin develop || true
           git checkout -b "release/${next_release}"
           git push origin "release/${next_release}"
         env:
