--- a/.github/workflows/1_build_and_run_tests.yml
+++ b/.github/workflows/1_build_and_run_tests.yml
@@ -1,4 +1,4 @@
-name: FEAT - Build And Pull Request
+name: 1 - FEAT - Build And Run Tests
 
 on:
   push:
@@ -68,26 +68,3 @@ jobs:
         with:
           name: financial_planning-${{ github.run_number }}
           path: target/*.jar
-
-  Create_Pull_Request:
-    name: Open Pull Request to Develop
-    runs-on: ubuntu-latest
-    needs: [ Run_Unit_Tests ]
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Extract branch name
-        id: extract_branch
-        run: echo "::set-output name=branch_name::${GITHUB_REF#refs/heads/}"
-
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.PAT_TOKEN }}
-          branch: ${{ github.ref }}
-          base: develop
-          title: "Auto-generated PR for branch ${{ steps.extract_branch.outputs.branch_name }} into develop."
-          body: "This PR was automatically created because of a new commit to branch ${{ steps.extract_branch.outputs.branch_name }}."
-          draft: false
