test: testing workflow

--- a/.github/workflows/3_create_pull_request_to_master.yml
+++ b/.github/workflows/3_create_pull_request_to_master.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           token: ${{ secrets.PAT_TOKEN }}
           branch: develop
-          base: develop
+          base: master
           title: "Auto-generated PR for branch develop into master."
           body: "This PR was automatically created because of a closed pull request in the develop branch."
           draft: false
