test: testing workflow

--- a/.github/workflows/3_create_pull_request_to_master.yml
+++ b/.github/workflows/3_create_pull_request_to_master.yml
@@ -19,7 +19,7 @@ jobs:
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.PAT_TOKEN }}
-          branch: develop
+          branch: ${{ github.ref }}
           base: master
           title: "Auto-generated PR for branch develop into master."
           body: "This PR was automatically created because of a closed pull request in the develop branch."
