test: testing workflow

--- a/.github/workflows/2_create_pull_request_to_develop.yml
+++ b/.github/workflows/2_create_pull_request_to_develop.yml
@@ -8,9 +8,10 @@ on:
 
 jobs:
 
-  Opens_Pull_Request:
+  Opens_Pull_Request_To_Develop:
     name: Opens Pull Request to Develop
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,16 +19,6 @@ jobs:
       - name: Extract branch name
         id: extract_branch
         run: echo "::set-output name=branch_name::${GITHUB_REF#refs/heads/}"
-
-      - name: Fetch latest changes
-        run: git fetch origin feature/${{ steps.extract_branch.outputs.branch_name }}
-
-      - name: Checkout feature branch
-        run: git checkout feature/${{ steps.extract_branch.outputs.branch_name }}
-
-      - name: Pull latest changes
-        run: git pull origin feature/${{ steps.extract_branch.outputs.branch_name }}
-
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
