test: testing adding up tag version

--- a/.github/workflows/2_create_pull_request_to_master.yml
+++ b/.github/workflows/2_create_pull_request_to_master.yml
@@ -2,8 +2,10 @@ name: 2 - DEVELOP - Opens Pull Request To Master
 
 on:
   pull_request:
-    types: [ closed ]
-    branches: [ develop ]
+    branches:
+      - develop
+    types:
+      - closed
 
 jobs:
 
