--- a/.github/workflows/1_build_and_create_pr_to_develop.yml
+++ b/.github/workflows/1_build_and_create_pr_to_develop.yml
@@ -2,10 +2,9 @@ name: 1 - FEAT - Build And Opens Pull Request To Develop
 
 on:
   push:
-    branches: [
-      feature/**,
-      fix/**
-    ]
+    branches:
+      - feature/**,
+      - fix/**
 
 jobs:
   Build_Artifact:
