--- a/.github/workflows/2_create_pull_request_to_master.yml
+++ b/.github/workflows/2_create_pull_request_to_master.yml
@@ -2,10 +2,8 @@ name: 2 - DEVELOP - Opens Pull Request To Master
 
 on:
   pull_request:
-    branches:
-      - develop
-    types:
-      - closed
+    branches: [ develop ]
+    types: [ closed ]
 
 jobs:
 
