--- a/.github/workflows/3_create_release.yml
+++ b/.github/workflows/3_create_release.yml
@@ -2,10 +2,8 @@ name: 3 - MASTER - Create Release
 
 on:
   pull_request:
-    branches:
-      - master
-    types:
-      - closed
+    branches: [ master ]
+    types: [ closed ]
 
 jobs:
 
