--- a/.github/workflows/3_create_release.yml
+++ b/.github/workflows/3_create_release.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           PR_COUNT=$(curl -s -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
                     -H "Accept: application/vnd.github.v3+json" \
-                    "https://api.github.com/repos/${{ github.repository }}/pulls?state=open&base=master&head=develop" \
+                    "https://api.github.com/repos/${{ github.repository }}/pulls?state=closed&base=master&head=develop" \
                     | jq length)
           echo "::set-output name=pr_count::$PR_COUNT"
 
