--- a/.github/workflows/1_build_and_create_pr_to_develop.yml
+++ b/.github/workflows/1_build_and_create_pr_to_develop.yml
@@ -72,6 +72,7 @@ jobs:
   Opens_Pull_Request_To_Develop:
     name: Opens Pull Request to Develop
     runs-on: ubuntu-latest
+    needs: [ Run_Unit_Tests ]
 
     steps:
       - name: Checkout repository
