--- a/.github/workflows/3_create_release.yml
+++ b/.github/workflows/3_create_release.yml
@@ -6,7 +6,6 @@ on:
     types: [ closed ]
 
 jobs:
-
   Create_Release:
     name: Create Release on PR to Master
     runs-on: ubuntu-latest
@@ -33,6 +32,7 @@ jobs:
         id: transform_version
         run: |
           pr_count="${{ steps.pr_count.outputs.pr_count }}"
+          pr_count = pr_count + 1
           if [ "$pr_count" -eq 0 ]; then
             version="v0.0.0"
           else
