--- a/.github/workflows/3_create_release.yml
+++ b/.github/workflows/3_create_release.yml
@@ -26,13 +26,13 @@ jobs:
                     -H "Accept: application/vnd.github.v3+json" \
                     "https://api.github.com/repos/${{ github.repository }}/pulls?state=closed&base=master&head=develop" \
                     | jq length)
+          PR_COUNT=$((PR_COUNT + 1))
           echo "::set-output name=pr_count::$PR_COUNT"
 
       - name: Transform PR count to version
         id: transform_version
         run: |
           pr_count="${{ steps.pr_count.outputs.pr_count }}"
-          pr_count = pr_count + 1
           if [ "$pr_count" -eq 0 ]; then
             version="v0.0.0"
           else
