--- a/.github/workflows/3_create_release.yml
+++ b/.github/workflows/3_create_release.yml
@@ -19,20 +19,39 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Get open pull requests from develop to master
-        id: pr_count
+      - name: List Pull Requests
+        id: list_prs
         run: |
-          PR_COUNT=$(curl -s -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
-                    -H "Accept: application/vnd.github.v3+json" \
-                    "https://api.github.com/repos/${{ github.repository }}/pulls?state=closed&base=master&head=develop" \
-                    | jq length)
-          PR_COUNT=$((PR_COUNT + 1))
-          echo "::set-output name=pr_count::$PR_COUNT"
+          page=1
+          pr_count=0
+          while :
+          do
+            response=$(curl -s -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+                             -H "Accept: application/vnd.github.v3+json" \
+                             "https://api.github.com/repos/{owner}/{repo}/pulls?state=closed&base=master&head=develop&page=${page}")
+            current_pr_count=$(echo "$response" | jq length)
+            pr_count=$((pr_count + current_pr_count))
 
-      - name: Transform PR count to version
+            if [ $current_pr_count -eq 0 ]; then
+              break
+            fi
+
+            echo "$response" | jq -r '.[] | .title'
+            if [ $current_pr_count -eq 30 ]; then
+              page=$((page + 1))
+            else
+              break
+            fi
+          done
+
+      - name: Set PR Count as Output
+        id: set_pr_count
+        run: echo "::set-output name=pr_count::$pr_count"
+
+      - name: Transform PR Count to Version
         id: transform_version
         run: |
-          pr_count="${{ steps.pr_count.outputs.pr_count }}"
+          pr_count="${{ steps.set_pr_count.outputs.pr_count }}"
           if [ "$pr_count" -eq 0 ]; then
             version="v0.0.0"
           else
