--- a/.github/workflows/3_create_release.yml
+++ b/.github/workflows/3_create_release.yml
@@ -23,20 +23,20 @@ jobs:
         id: list_prs
         run: |
           page=1
-          pr_count=1
+          pr_count=0
           while :
           do
-            response=$(curl -s -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+            response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
                              -H "Accept: application/vnd.github.v3+json" \
                              "https://api.github.com/repos/{owner}/{repo}/pulls?state=closed&base=master&head=develop&page=${page}")
-            current_pr_count=$(echo "$response" | jq length)
-            pr_count=$((pr_count + current_pr_count))
+            pr_count=$(echo "$response" | jq length)
 
-            if [ $current_pr_count -eq 0 ]; then
+            if [ $pr_count -eq 0 ]; then
               break
             fi
-          
-            if [ $current_pr_count -eq 30 ]; then
+
+            # Verificar se há mais páginas e atualizar o número da página
+            if [ $pr_count -eq 30 ]; then
               page=$((page + 1))
             else
               break
