--- a/.github/workflows/3_create_release.yml
+++ b/.github/workflows/3_create_release.yml
@@ -26,9 +26,9 @@ jobs:
           pr_count=0
           while :
           do
-            response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            response=$(curl -s -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
                              -H "Accept: application/vnd.github.v3+json" \
-                             "https://api.github.com/repos/{owner}/{repo}/pulls?state=closed&base=master&head=develop&page=${page}")
+                             "https://api.github.com/repos/LucasMartins007/financial_plan_api/pulls?state=closed&base=master&head=develop&page=${page}")
             pr_count=$(echo "$response" | jq length)
 
             if [ $pr_count -eq 0 ]; then
