--- a/.github/workflows/3_create_release.yml
+++ b/.github/workflows/3_create_release.yml
@@ -23,20 +23,20 @@ jobs:
         id: list_prs
         run: |
           page=1
-          pr_count=0
+          count=0
           while :
           do
-            response=$(curl -s -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
-                             -H "Accept: application/vnd.github.v3+json" \
-                             "https://api.github.com/repos/${{ github.repository }}/pulls?state=closed&base=master&head=develop&page=${page}")
-            current_pr_count=$(echo "$response" | jq length)
-            pr_count=$((pr_count + current_pr_count))
+            PR_COUNT=$(curl -s -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+                    -H "Accept: application/vnd.github.v3+json" \
+                    "https://api.github.com/repos/${{ github.repository }}/pulls?state=closed&base=master&head=develop&page=${page}" \
+                    | jq length)
+            count=$((count + PR_COUNT))
 
-            if [ $current_pr_count -eq 0 ]; then
+            if [ $PR_COUNT -eq 0 ]; then
               break
             fi
 
-            if [ $current_pr_count -eq 30 ]; then
+            if [ $PR_COUNT -eq 30 ]; then
               page=$((page + 1))
             else
               break
@@ -45,7 +45,7 @@ jobs:
 
       - name: Set PR Count as Output
         id: set_pr_count
-        run: echo "::set-output name=pr_count::$pr_count"
+        run: echo "::set-output name=pr_count::$count"
 
       - name: Transform PR Count to Version
         id: transform_version
